--- a/client/src/App.css
+++ b/client/src/App.css
@@ -34,3 +34,12 @@ a {
 .item {
   width: 30%
 }
+
+.home {
+  margin: 26px auto
+}
+.home-card {
+  max-width: 500px;
+  height: max-content;
+  margin: 26px auto;
+}
